2010-07-17  Romain Francois <romain@r-enthusiasts.com>

	* inst/include/vector/Vector.h: faster lhs use of names, only using callback
	to R if necessary. (discovered while profiling RProtoBuf)
	
2010-07-16  Romain Francois <romain@r-enthusiasts.com>

	* man/Rcpp-package.Rd : removed old content and point to the Rcpp-package
	vignette for current guidelines.

2010-07-09  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION: Release 0.8.4

	* debian/*: Similarly updated for new release to Debian

2010-07-09  Romain Francois <romain@r-enthusiasts.com>

	* src/RObject.cpp: adapt the SlotProxy class to deal with the special
	case of the .Data slot (slot<- changes the internal SEXP)

	* R/Module.R: the C++Class now inherits from "character", to facilitate
	S4 method dispatch

	* src/Module.cpp: The CppClass ctor sets the .Data of the C++Class object
	to an obfuscated name to avoid class names clashes at the R level.

2010-07-08  Romain Francois <romain@r-enthusiasts.com>

	* inst/include/Rcpp/sugar/functions/head.h: new sugar function : head
	* inst/include/Rcpp/sugar/functions/tail.h: new sugar function : tail

	* inst/include/Rcpp/sugar/functions/tail.h: new sugar function : diag

2010-07-07  Dirk Eddelbuettel  <edd@debian.org>

	* inst/README: Updated and now pointing to all the other documentation

2010-07-07  Romain Francois <romain@r-enthusiasts.com>

	* inst/include/Rcpp/sugar/functions/rep.h: version of rep that takes a
	primitive as the first argument

2010-07-07  Dirk Eddelbuettel  <edd@debian.org>

	* inst/unitTests/runTests.R: Reverted to running all tests now that
	tests are reorganised using the one-compile-per-function scheme which
	significantly speeds up running of the numerous unit tests

2010-07-06  Dirk Eddelbuettel  <edd@debian.org>

	* src/Date.cpp: Imported mktime() from R (which is due to Arthur Olson)

2010-07-06  Romain Francois <romain@r-enthusiasts.com>

	* inst/include/Rcpp/sugar/functions/ifelse.h: using compile time dispatch